Fix responsive menu bug: hide desktop menu on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -172,7 +172,7 @@ img {
 
 /* Responsive Visibility */
 .hidden-mobile {
-  display: none;
+  display: none !important;
 }
 
 .hidden-desktop {
